<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="app_name">To-Do List</string>

    <!-- MainActivity -->
    <string name="menu_about">About</string>
    <string name="button_add_title">New Task</string>
    <string name="button_account_title">Choose Account to Sync</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="dialog_message">Delete or edit the task?</string>
    <string name="dialog_positive">Remove</string>
    <string name="dialog_neutal">Edit</string>
    <string name="dialog_negative">Cancel</string>

    <!-- AboutActivity -->
    <string name="robin">UI Development</string>
    <string name="felix">Logic Development</string>
    <string name="alex">Logic Development</string>

    <!-- EditActivity -->
    <string name="title_activity_edit">Edit Task</string>
    <string name="edit_et_hint">Name (required)</string>
    <string name="edit_bttn_cancel_title">Cancel</string>
    <string name="edit_bttn_save_title">Save</string>
    <string name="edit_toast">The name must not be empty!</string>

</resources>