<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edit_taskname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_et_hint" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_bttn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_bttn_cancel_title" />

        <Button
            android:id="@+id/edit_bttn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_bttn_save_title" />
    </LinearLayout>

</LinearLayout>